--- a/Admin_Vuelos/Admin_Vuelos.vbproj
+++ b/Admin_Vuelos/Admin_Vuelos.vbproj
@@ -184,6 +184,8 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.vb" />
     <Compile Include="App_Start\RouteConfig.vb" />
+    <Compile Include="Clases\Cls_Reserva.vb" />
+    <Compile Include="Clases\Conexion.vb" />
     <Compile Include="Default.aspx.vb">
       <SubType>ASPXCodeBehind</SubType>
       <DependentUpon>Default.aspx</DependentUpon>
@@ -220,6 +222,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Ope_DB.vb" />
     <Compile Include="Reserva.aspx.designer.vb">
       <DependentUpon>Reserva.aspx</DependentUpon>
     </Compile>
@@ -283,6 +286,17 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="img\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="ORAOLEDBLib">
+      <Guid>{0BB9AFD1-51A1-11D2-BB7D-00C04FA30080}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
