--- a/Admin_Vuelos/Web.config
+++ b/Admin_Vuelos/Web.config
@@ -15,7 +15,67 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
       </controls>
     </pages>
+	<authentication mode="Forms">
+		<forms loginUrl="~/Login.aspx" defaultUrl="Default.aspx" name=".ASPNETAUTH" protection="Validation" path="/" timeout="20" ></forms>
+	</authentication>
+	<authorization>
+		
+		<allow users = "*" />
+	</authorization>
+  <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+        <add name="HttpPost"/>
+      </protocols>
+    </webServices> 
   </system.web>
+	
+	<location path="Login.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+		
+	<location path="Content">
+		<system.web>
+			<authorization>
+				<allow users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Scripts">
+		<system.web>
+			<authorization>
+				<allow users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="JS_pages">
+		<system.web>
+			<authorization>
+				<allow users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="img">
+		<system.web>
+			<authorization>
+				<allow users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="fonts">
+		<system.web>
+			<authorization>
+				<allow users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	
+	
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
