--- a/Admin_Vuelos/Web.config
+++ b/Admin_Vuelos/Web.config
@@ -15,9 +15,9 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
       </controls>
     </pages>
-	<authentication mode="Forms">
+	<!--<authentication mode="Forms">
 		<forms loginUrl="~/Login.aspx" defaultUrl="Default.aspx" name=".ASPNETAUTH" protection="Validation" path="/" timeout="20" ></forms>
-	</authentication>
+	</authentication>-->
 	<authorization>
 		
 		<allow users = "*" />
